k8s/deploy/storefront-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefront-api-ingress
  namespace: yas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: storefront.yas.local.com
    http:
      paths:
      - backend:
          service:
            name: storefront-bff
            port:
              number: 80
        path: /api(/|$)(.*)
        pathType: ImplementationSpecific
